; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/xtensa/platforms/iss/extr_console.c_rs_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/xtensa/platforms/iss/extr_console.c_rs_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32 }
%struct.tty_struct = type { i32, i32 }
%struct.file = type { i32 }

@SERIAL_MAX_NUM_LINES = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@timer_lock = common dso_local global i32 0, align 4
@serial_timer = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@rs_poll = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@SERIAL_TIMER_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*, %struct.file*)* @rs_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rs_open(%struct.tty_struct* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tty_struct*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  store %struct.tty_struct* %0, %struct.tty_struct** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %7 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %8 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @SERIAL_MAX_NUM_LINES, align 4
  %15 = icmp sge i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12, %2
  %17 = load i32, i32* @ENODEV, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %36

19:                                               ; preds = %12
  %20 = call i32 @spin_lock(i32* @timer_lock)
  %21 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %22 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = icmp eq i32 %23, 1
  br i1 %24, label %25, label %34

25:                                               ; preds = %19
  %26 = call i32 @init_timer(%struct.TYPE_4__* @serial_timer)
  %27 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %28 = ptrtoint %struct.tty_struct* %27 to i64
  store i64 %28, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @serial_timer, i32 0, i32 0), align 8
  %29 = load i32, i32* @rs_poll, align 4
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @serial_timer, i32 0, i32 1), align 8
  %30 = load i64, i64* @jiffies, align 8
  %31 = load i64, i64* @SERIAL_TIMER_VALUE, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @mod_timer(%struct.TYPE_4__* @serial_timer, i64 %32)
  br label %34

34:                                               ; preds = %25, %19
  %35 = call i32 @spin_unlock(i32* @timer_lock)
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %34, %16
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @init_timer(%struct.TYPE_4__*) #1

declare dso_local i32 @mod_timer(%struct.TYPE_4__*, i64) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
